fixed illegible text for mobile

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -46,12 +46,6 @@ hr {
     display: none;
 }
 
-.navbar-default {
-    background: #fff;
-    background: rgba(255,255,255,0.9);
-    border: none;
-}
-
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
@@ -227,12 +221,10 @@ footer p {
 	
 }
 
-@media screen and (min-width:1200px) {
-    .box:after {
-        content: '';
-        display: table;
-        clear: both;
-    }
+.box:after {
+    content: '';
+    display: table;
+    clear: both;
 }
 
 @media (min-width: 992px) {
@@ -259,6 +251,7 @@ footer p {
     .box {
         padding: 20px 10px;
         margin-bottom: 15px;
+        background: rgba(255,255,255,0.95);
     }
 
     .img-partial {
